Project

General

Profile

Actions

Bug #18211

closed

test_snapshot_remove (tasks.cephfs.test_strays.TestStrays) failed at data pool empty check

Added by Zheng Yan over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://pulpito.ceph.com/jspray-2016-12-06_12:37:38-kcephfs:recovery-master-testing-basic-smithi/611141/

2016-12-06T13:28:03.558 INFO:tasks.cephfs_test_runner:FAIL: test_snapshot_remove (tasks.cephfs.test_strays.TestStrays)
2016-12-06T13:28:03.558 INFO:tasks.cephfs_test_runner:----------------------------------------------------------------------
2016-12-06T13:28:03.558 INFO:tasks.cephfs_test_runner:Traceback (most recent call last):
2016-12-06T13:28:03.559 INFO:tasks.cephfs_test_runner:  File "/home/teuthworker/src/ceph-qa-suite_wip-kclient-python-12/tasks/cephfs/test_strays.py", line 663, in test_snapshot_remove
2016-12-06T13:28:03.559 INFO:tasks.cephfs_test_runner:    self.assertTrue(self.fs.data_objects_absent(file_a_ino, size_mb * 1024 * 1024))
2016-12-06T13:28:03.559 INFO:tasks.cephfs_test_runner:AssertionError: False is not true

Related issues 1 (0 open1 closed)

Related to CephFS - Bug #17193: truncate can cause unflushed snapshot data loseResolvedZheng Yan09/01/2016

Actions
Actions #1

Updated by Zheng Yan over 7 years ago

the object is from pool permission check. it's kernel version of http://tracker.ceph.com/issues/13782

Actions #2

Updated by John Spray over 7 years ago

  • Related to Bug #17193: truncate can cause unflushed snapshot data lose added
Actions #3

Updated by John Spray over 7 years ago

  • Assignee set to Zheng Yan
Actions #5

Updated by Zheng Yan over 7 years ago

  • Status changed from New to 7
Actions #6

Updated by Zheng Yan over 7 years ago

  • Status changed from 7 to Resolved
Actions

Also available in: Atom PDF